--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "test": "jest",
     "train": "node src/training/cli.js"
   },
-  "keywords": ["game", "threejs", "racing", "ai", "neural-network"],
+  "keywords": [
+    "game",
+    "threejs",
+    "racing",
+    "ai",
+    "neural-network"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "synaptic": "^1.1.4"
+    "synaptic": "^1.1.4",
+    "three": "^0.178.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.5"
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0"
   }
 }
