--- a/src/tracks/snow.json
+++ b/src/tracks/snow.json
@@ -38,9 +38,9 @@
     "roadColor": "0xFFFFFF"
   },
   "obstacles": [
-    { "type": "snow_bank", "x": -25, "y": 1.5, "z": -25, "width": 6, "height": 3, "depth": 6 },
-    { "type": "snow_bank", "x": 25, "y": 2, "z": 25, "width": 8, "height": 4, "depth": 8 },
-    { "type": "ice_patch", "x": 0, "y": 0.1, "z": 0, "width": 10, "height": 0.1, "depth": 10, "friction": 0.7 }
+    { "type": "snow_bank", "x": -25, "y": 1.5, "z": -25, "width": 6, "height": 3, "depth": 6, "rotation": 0 },
+    { "type": "snow_bank", "x": 25, "y": 2, "z": 25, "width": 8, "height": 4, "depth": 8, "rotation": 0 },
+    { "type": "ice_patch", "x": 0, "y": 0.1, "z": 0, "width": 10, "height": 0.1, "depth": 10, "rotation": 0, "friction": 0.7 }
   ],
   "decorations": [
     { "type": "pine_tree", "x": -20, "y": 0, "z": -15, "height": 8, "trunkHeight": 4, "leavesHeight": 4 },
