--- a/src/tracks/snow.json
+++ b/src/tracks/snow.json
@@ -1,29 +1,26 @@
 {
-  "name": "Snow Track",
+  "name": "Snow Track - Square",
   "type": "snow",
-  "description": "A winter wonderland with snow-covered pine trees and icy patches",
+  "description": "A square winter wonderland with snow-covered pine trees and icy patches",
   "difficulty": "easy",
   "lapCount": 3,
   "startPositions": [
-    { "x": -3, "y": 0, "z": -45 },
-    { "x": -1, "y": 0, "z": -45 },
-    { "x": 1, "y": 0, "z": -45 },
-    { "x": 3, "y": 0, "z": -45 }
+    { "x": -43, "y": 0, "z": -45 },
+    { "x": -41, "y": 0, "z": -45 },
+    { "x": -39, "y": 0, "z": -45 },
+    { "x": -37, "y": 0, "z": -45 }
   ],
   "checkpoints": [
-    { "x": 0, "y": 0, "z": -40, "radius": 5 },
-    { "x": 30, "y": 0, "z": -20, "radius": 5 },
-    { "x": 30, "y": 0, "z": 20, "radius": 5 },
-    { "x": 0, "y": 0, "z": 40, "radius": 5 },
-    { "x": -30, "y": 0, "z": 20, "radius": 5 },
-    { "x": -30, "y": 0, "z": -20, "radius": 5 }
+    { "x": -40, "y": 0, "z": -40, "radius": 5 },
+    { "x": 40, "y": 0, "z": -40, "radius": 5 },
+    { "x": 40, "y": 0, "z": 40, "radius": 5 },
+    { "x": -40, "y": 0, "z": 40, "radius": 5 }
   ],
   "powerupSpawns": [
-    { "x": 15, "y": 1, "z": 15, "type": "boost" },
-    { "x": -15, "y": 1, "z": 15, "type": "missile" },
-    { "x": 15, "y": 1, "z": -15, "type": "mine" },
-    { "x": -15, "y": 1, "z": -15, "type": "boost" },
-    { "x": 0, "y": 1, "z": 0, "type": "random" }
+    { "x": -40, "y": 1, "z": -40, "type": "random" },
+    { "x": 40, "y": 1, "z": -40, "type": "random" },
+    { "x": 40, "y": 1, "z": 40, "type": "random" },
+    { "x": -40, "y": 1, "z": 40, "type": "random" }
   ],
   "environment": {
     "skyColor": "0xB0E0E6",
@@ -32,15 +29,75 @@
     "directionalLight": "0xffffff"
   },
   "trackGeometry": {
-    "width": 200,
-    "height": 200,
+    "width": 120,
+    "height": 120,
     "borderColor": "0xE0E0E0",
     "roadColor": "0xFFFFFF"
   },
   "obstacles": [
-    { "type": "snow_bank", "x": -25, "y": 1.5, "z": -25, "width": 6, "height": 3, "depth": 6, "rotation": 0 },
-    { "type": "snow_bank", "x": 25, "y": 2, "z": 25, "width": 8, "height": 4, "depth": 8, "rotation": 0 },
-    { "type": "ice_patch", "x": 0, "y": 0.1, "z": 0, "width": 10, "height": 0.1, "depth": 10, "rotation": 0, "friction": 0.7 }
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -20, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -10, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 0, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 10, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 20, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": -50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -20, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -10, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 0, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 10, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 20, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": -20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": -10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": 0, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": 10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": 20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 50, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": -20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": -10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 0, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 20, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 10, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 0, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -10, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -20, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 50, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": 30, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 20, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 10, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": 0, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -10, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -20, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": 20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": 10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": 0, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": -10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": -20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -50, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 30, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": 0, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": -10, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": -20, "width": 10, "height": 3, "depth": 10, "rotation": 0 },
+    { "type": "snow_bank", "x": -30, "y": 1.5, "z": -30, "width": 10, "height": 3, "depth": 10, "rotation": 0 }
   ],
   "decorations": [
     { "type": "pine_tree", "x": -20, "y": 0, "z": -15, "height": 8, "trunkHeight": 4, "leavesHeight": 4 },
