--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "express": "^4.18.2",
     "synaptic": "^1.1.4",
     "three": "^0.178.0"
